# openitemdef

./: CMakeLists.txt  Doxyfile  README.md
.github/workflows/: pull_request.yml  push_build_deploy.yml
include/openitemdef/: openitemdef.h  schema.h
scripts/: build.sh
src/: schema.c
tests/: CMakeLists.txt  test_schema.c
tests/data/: item_def_steam_official_example.json
